# sector-tracker

./: .env.example  .gitignore  README.md  cross-asset-market-board-implementation.md  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py  db.py  main.py  models.py  scheduler.py
config/: market_board_seed.sqlite3  watchlists.yaml
deploy/: cross-asset-board.service  sector-tracker-report-watchdog.service  sector-tracker-report-watchdog.timer  sector-tracker-stops.service  sector-tracker-stops.timer  sector-tracker-uploader.path  sector-tracker-uploader.service  sector-tracker-uploader.timer  setup-vps.sh  update.sh
scripts/: fringe_stop_monitor.py  report_pipeline_watchdog.py  run.sh  vault_report_uploader.py
tests/: test_asset_profile.py  test_bar_compatible_currency.py  test_config.py  test_crypto_etf_flows.py  test_crypto_tape.py  test_daily_board.py  test_db.py  test_econ_calendar.py  test_edit_token.py  test_finnhub_provider.py  test_fringe.py  test_futures_rvol_gate.py  test_history_service.py  test_hyperliquid_provider.py  test_key_dates.py  test_lifespan_shutdown.py  test_lighter_history_routing.py  test_lighter_overlay.py  test_lighter_provider.py  test_macro.py  test_models.py  test_news_fairness.py  test_news_loop.py  test_news_service.py  test_playwright_smoke.py  test_quote_service.py  test_relative_volume.py  test_report_pipeline_watchdog.py  test_reports.py  test_scheduler.py  test_security_headers.py  test_snapshot_date_clamp.py  test_snapshots.py  test_stooq_provider.py  test_stop_monitor.py  test_tape_baskets.py  (+5 more)
(+21 files in other folders)
